# baseline-safe-marl

./: .gitignore  EXPERIMENTS.md  README.md  pyproject.toml
.specify/memory/: constitution.md
algos/: __init__.py  base.py  registry.py
algos/facmac/: __init__.py  policy.py  trainer.py
algos/happo/: __init__.py  policy.py  trainer.py
algos/macpo/: __init__.py  policy.py  trainer.py
algos/mappo/: __init__.py  policy.py  trainer.py
algos/mappo_lagrangian/: __init__.py  policy.py  trainer.py
algos/matd3/: __init__.py  policy.py  trainer.py
configs/: phase1_default.yaml
configs/algos/: happo.yaml  macpo.yaml  mappo.yaml  mappo_lagrangian.yaml  matd3.yaml
configs/exp/: exp1_onpolicy_safe.yaml
docs/: algorithm-implementation-status.md  algorithm-research.md  config-integration-notes.md  index.md  minimal-training-readiness.md  scripts-overview.md  smoke-test-quickstart.md
docs/algorithms/: algorithm-research.md
docs/api/: environment-smoke-test-plan.md
docs/architecture/: phase1-fallback-plan.md  phase1-prototype-plan.md
docs/specs/: project-foundation.md
envs/: safe_mamujoco_adapter.py
scripts/: demo_episode.py  demo_episode_mappo.py  demo_episode_patched.py  office-agent-push.py  phase1_fallback_smoke_test.py  run_exp.py  smoke_test_algos.py
specs/001-codebase-structure/: spec.md
specs/002-benchmark-exp/: spec.md
src/: algo_config.py  config.py
src/baseline_safe_marl/: __init__.py  __main__.py  algo_config.py  config.py  constants.py  env_utils.py  logger.py  registry.py
src/baseline_safe_marl/algos/: __init__.py  registry.py
(+22 files in other folders)
